[gd_scene load_steps=9 format=3 uid="uid://cc04nyuk2jim"]

[ext_resource type="Script" path="res://scene/world/world.gd" id="1_xh2uv"]
[ext_resource type="Script" path="res://scene/world/playground.gd" id="2_mbh5m"]
[ext_resource type="Script" path="res://scene/title_screen/main_menu.gd" id="5_1wxbk"]
[ext_resource type="Script" path="res://scene/world/player_customization.gd" id="6_ang47"]
[ext_resource type="Texture2D" uid="uid://bggswxus5u4xq" path="res://art/player/player_s.png" id="7_wknk0"]

[sub_resource type="LabelSettings" id="LabelSettings_c5smi"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_v0itr"]
font_color = Color(1, 0, 0, 1)
outline_size = 2

[sub_resource type="ButtonGroup" id="ButtonGroup_pnjst"]

[node name="world" type="Node2D"]
script = ExtResource("1_xh2uv")
level_image_compression = 2

[node name="level_texture" type="TextureRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0

[node name="playground" type="Node2D" parent="."]
script = ExtResource("2_mbh5m")

[node name="server_update_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="title_screen" type="CanvasLayer" parent="."]
script = ExtResource("5_1wxbk")

[node name="data_update_timer" type="Timer" parent="title_screen"]

[node name="title" type="Label" parent="title_screen"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Problem Solvers
DevBuild 0"
label_settings = SubResource("LabelSettings_c5smi")
horizontal_alignment = 1

[node name="server_status" type="Label" parent="title_screen"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -23.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
text = "Disconnected."

[node name="connection" type="VBoxContainer" parent="title_screen"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -85.5
offset_right = 155.0
offset_bottom = 85.5
grow_vertical = 2

[node name="single_player" type="Button" parent="title_screen/connection"]
layout_mode = 2
text = "Single Player"

[node name="host_server" type="Button" parent="title_screen/connection"]
layout_mode = 2
text = "Host Server"

[node name="join_dev_server" type="Button" parent="title_screen/connection"]
layout_mode = 2
text = "Join Dev Server"

[node name="padding" type="Control" parent="title_screen/connection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="custom_server_address" type="LineEdit" parent="title_screen/connection"]
layout_mode = 2
placeholder_text = "localhost"

[node name="join_custom_server" type="Button" parent="title_screen/connection"]
layout_mode = 2
text = "Join Custom Server
"

[node name="padding2" type="Control" parent="title_screen/connection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="disconnect" type="Button" parent="title_screen/connection"]
layout_mode = 2
text = "Disconnect"

[node name="server_warning" type="Label" parent="title_screen/connection"]
layout_mode = 2
text = "WARNING:
You are the server.  Disconnecting will drop every peer currently playing."
label_settings = SubResource("LabelSettings_v0itr")
autowrap_mode = 2

[node name="team_list" type="PanelContainer" parent="title_screen"]
custom_minimum_size = Vector2(300, 400)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -160.0
offset_right = -8.0
offset_bottom = 240.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="title_screen/team_list"]
layout_mode = 2

[node name="l_players" type="Label" parent="title_screen/team_list/VBoxContainer"]
layout_mode = 2
text = "Players in Game"
horizontal_alignment = 1

[node name="teams" type="HBoxContainer" parent="title_screen/team_list/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="problem" type="VBoxContainer" parent="title_screen/team_list/VBoxContainer/teams"]
layout_mode = 2
size_flags_horizontal = 3

[node name="t_problem" type="Label" parent="title_screen/team_list/VBoxContainer/teams/problem"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Problem"
horizontal_alignment = 1

[node name="team_p" type="RichTextLabel" parent="title_screen/team_list/VBoxContainer/teams/problem"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "None"

[node name="solvers" type="VBoxContainer" parent="title_screen/team_list/VBoxContainer/teams"]
layout_mode = 2
size_flags_horizontal = 3

[node name="t_solvers" type="Label" parent="title_screen/team_list/VBoxContainer/teams/solvers"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Solvers"
horizontal_alignment = 1

[node name="team_s" type="RichTextLabel" parent="title_screen/team_list/VBoxContainer/teams/solvers"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "None"

[node name="lobby" type="VBoxContainer" parent="title_screen/team_list/VBoxContainer"]
layout_mode = 2

[node name="in_lobby" type="Label" parent="title_screen/team_list/VBoxContainer/lobby"]
layout_mode = 2
text = "In Lobby"
horizontal_alignment = 1

[node name="lobby" type="Label" parent="title_screen/team_list/VBoxContainer/lobby"]
layout_mode = 2

[node name="player_custom" type="PanelContainer" parent="title_screen"]
custom_minimum_size = Vector2(300, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -160.0
offset_right = 76.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ang47")

[node name="main" type="VBoxContainer" parent="title_screen/player_custom"]
layout_mode = 2

[node name="time_to_spawn" type="Label" parent="title_screen/player_custom/main"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Can spawn in XXs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="team" type="HBoxContainer" parent="title_screen/player_custom/main"]
layout_mode = 2
alignment = 1

[node name="problem_team" type="Button" parent="title_screen/player_custom/main/team"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_pnjst")
text = "Problem
Team!"

[node name="solver_team" type="Button" parent="title_screen/player_custom/main/team"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_pnjst")
text = "Solver 
Team!"

[node name="player" type="HBoxContainer" parent="title_screen/player_custom/main"]
layout_mode = 2
size_flags_vertical = 3

[node name="player_text" type="TextureRect" parent="title_screen/player_custom/main/player"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_wknk0")

[node name="mods" type="VBoxContainer" parent="title_screen/player_custom/main/player"]
layout_mode = 2
size_flags_horizontal = 3

[node name="color_picker" type="ColorPicker" parent="title_screen/player_custom/main/player/mods"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
alignment = 1
color = Color(0, 0, 0, 1)
edit_alpha = false
picker_shape = 4
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
hex_visible = false
presets_visible = false

[node name="player_name" type="LineEdit" parent="title_screen/player_custom/main"]
layout_mode = 2

[node name="join" type="Button" parent="title_screen/player_custom/main"]
layout_mode = 2
disabled = true
text = "Spawn!"

[node name="warning_message" type="Label" parent="title_screen/player_custom/main"]
layout_mode = 2
text = "(warning message)"
horizontal_alignment = 1

[connection signal="timeout" from="title_screen/data_update_timer" to="title_screen" method="_on_data_update_timer_timeout"]
[connection signal="pressed" from="title_screen/connection/single_player" to="title_screen" method="_on_single_player_pressed"]
[connection signal="pressed" from="title_screen/connection/host_server" to="title_screen" method="_on_host_server_pressed"]
[connection signal="pressed" from="title_screen/connection/join_dev_server" to="title_screen" method="_on_join_dev_server_pressed"]
[connection signal="pressed" from="title_screen/connection/join_custom_server" to="title_screen" method="_on_join_custom_server_pressed"]
[connection signal="pressed" from="title_screen/connection/disconnect" to="title_screen" method="_on_disconnect_pressed"]
[connection signal="pressed" from="title_screen/player_custom/main/team/problem_team" to="title_screen/player_custom" method="_on_problem_team_pressed"]
[connection signal="pressed" from="title_screen/player_custom/main/team/solver_team" to="title_screen/player_custom" method="_on_solver_team_pressed"]
[connection signal="color_changed" from="title_screen/player_custom/main/player/mods/color_picker" to="title_screen/player_custom" method="_on_color_picker_color_changed"]
[connection signal="pressed" from="title_screen/player_custom/main/join" to="title_screen" method="_on_join_pressed"]
